overflow-x fixed

--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
 body{
     background-color: white;
     color: black;
@@ -11,7 +16,7 @@ body{
 
 #myVideo {
     width:100%;
-    height: 500px;
+    height: 50vh;
     object-fit: cover;
     position: relative;
   }
@@ -268,6 +273,12 @@ nav{
     color: rgb(77, 77, 77);
 }
 
+.portfolio-section{
+    display: flex;
+    flex-direction: column;
+    min-width: 50%;
+}
+
 .portfolio{
     margin-top: 5vh;
     min-width: 65vh;
@@ -277,8 +288,6 @@ nav{
 }
 
 .portfolio img {
-    width: 30px;
-    min-width: 60vh;
     max-width: 65vh;
     margin: 2vh;
     filter: grayscale(1);
@@ -330,7 +339,7 @@ input[type=text], textarea {
     margin-left: 2vh;
     font-family: "Open Sans", sans-serif;
     letter-spacing: 2px;
-    width: 600px;
+    width: 90vh;
     border:none;
     border-bottom: 2px solid rgb(65, 65, 65);
   }
@@ -381,4 +390,48 @@ input[type=submit] {
     color: white;
     font-family: "Roboto", sans-serif;
     font-size: 10px;
+}
+
+#id, #skills, #portfolio, #about {
+    padding-top:100px;
+}
+
+@media (max-width: 375px) and (max-height:812px) {
+    .logo a{
+        display: none;
+    }
+    .portfolio-section{
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
+        align-items: center;
+    }
+    .portfolio img {
+        max-width: 40vh;
+        margin: 2vh;
+        filter: grayscale(1);
+        transition: 1s ease-in-out;
+        align-self: center;
+    }
+    .contact-section{
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        max-width: 100vh;
+        align-items: center;
+    }
+    input[type=text], textarea {
+        max-width: 40vh;
+        align-self: center;
+    }
+    .social{
+        width:25vh;
+        justify-content: space-between;
+        margin-left: 2vh;
+    }
+    .pac{
+        font-size: 30px;
+        letter-spacing: 0.5px;
+    }
+
 }
